Preparing to deploy to mainnets

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,12 @@
 # Environment & secrets
 .env
+.env.example
 .env.local
 .env.*.local
 .envrc
 *.env
 *.key
 *.pem
-!.env.example
 !.env.*.example
 
 # Package manager artifacts
